--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="box8 box"><div class="box-content">
                     <h2>Home & Kitchen</h2>
                 <div class="box-image" style="background-image: url(sparebox.jpg);"> </div>
-                 <p>See more</p>
+                 <p>See more about products</p>
                 </div>
             </div>
         </div> 
@@ -161,7 +161,7 @@
 
     </head>
     <footer> 
-        .foot
+        
     </footer>
 
 </body>
